added eso policy

--- a/bootstrap/overlays/hub/values.yaml
+++ b/bootstrap/overlays/hub/values.yaml
@@ -44,3 +44,10 @@ applications:
       repoURL: https://github.com/mervani/acm-policies.git
       path: policies/gitops
 
+  eso-policy:
+    destination:
+      namespace: acm-policies
+    source:
+      repoURL: https://github.com/mervani/acm-policies.git
+      path: policies/eso
+
