--- a/policies/eso/instance/base/operator-config.yaml
+++ b/policies/eso/instance/base/operator-config.yaml
@@ -7,13 +7,32 @@ spec:
     enabled: true
     service:
       port: 8080
+  replicaCount: 3
   resources:
     requests:
       cpu: 50m
       memory: 128Mi
     limits:
-      cpu: "1"
-      memory: 1Gi
+      cpu: "2"
+      memory: 2Gi
+  certController:
+    replicaCount: 2
+    resources:
+      requests:
+        cpu: 50m
+        memory: 128Mi
+      limits:
+        cpu: "1"
+        memory: 1Gi
+  webhook:
+    replicaCount: 2
+    resources:
+      requests:
+        cpu: 50m
+        memory: 128Mi
+      limits:
+        cpu: "1"
+        memory: 1Gi
   crds:
     createClusterExternalSecret: false
     createClusterSecretStore: false
